--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,20 @@
 before_script:
     - apt-get install golang
 
+stages:
+    - test
+    - run
 
 test:
-    - go test
+    stage: test
+    script:
+        - go test
+
+
+run:
+    stage: run
+    script:
+        - go run main.go
+    environment: test
 
 
