--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 image: ubuntu:14.04
 
 before_script:
-    - apt-get install golang
+    - apt-get update
+    - apt-get install -y golang
 
 stages:
     - test
