--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ application_image:
   services:
     - docker:1.12-dind
   script:
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.old-box.com
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker build -f Dockerfile-ci -t $APPLICATION_IMAGE .
     - docker push $APPLICATION_IMAGE
 
@@ -40,7 +40,7 @@ robot_image:
   services:
     - docker:1.12-dind
   script:
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.old-box.com
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker build -t $ROBOT_IMAGE robot
     - docker push $ROBOT_IMAGE
     
@@ -50,7 +50,7 @@ robot_test:
   services:
     - docker:1.12-dind
   script:
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.old-box.com
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker run -d --name selenium selenium/standalone-firefox:latest
     - docker run -d --name application $APPLICATION_IMAGE
     - docker run --rm -v $(pwd)/robotreport:/robot/out --link application:application --link selenium:selenium $ROBOT_IMAGE
